--- a/index.html
+++ b/index.html
@@ -297,7 +297,6 @@ body.dark .icon {
   opacity: 1;
 }
 
-
   </style>
 
 <!-- Google tag (gtag.js) -->
@@ -409,34 +408,28 @@ body.dark .icon {
 
 <!-- Secrets of the Subtle Card -->
  <div class="iphone-frame">
-  <h1>Join next airings,</h1>
-  <h2>we recently aired </h2> 
-  <h3>Secrets of the Subtle</h3>
+  <h1>Next upcoming -> MEDITATIONS </h1>
+  <h2>Join next airings,</h2>
+  <h3>we recently aired </h3> 
+  <h4>Secrets of the Subtle</h4>
   <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
-  <ul class="features">
-      <li> Next upcoming -> MEDITATIONS </li>
-    </ul>
 </div>
   
  <!-- Sahaj Meditation Card -->
   <div class="iphone-frame">
     <h1>Join Waitlist,</h1>
     <h2>for next Sahaj Mediation Batch</h2>
+    <h2>for Deep Sleep & Anxiety Relief sessions</h2>
+    <h2>for offline Ashram Happiness Course</h2>
+    <h2>for offline Happiness Course in City</h2>
+    <h2>for Online Breath and Meditation Workshops</h2>
     <p class="subtitle">with Vishal Merani</p>
-   
-    <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-   <ul class="features">
-    <li>⤷ </li> </ul>
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-   <h4 class="queries-text">Queries & help @ 9818503888</h4>
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly | Help: 9818503888" id="copyText3" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText3', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
-    <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
+    <div class="footer"> Queries & help @ 9818503888 | ♡ Online & Offline Sessions <br>
 ॐ  Jai Guru Dev ॐ
+</div>
+    <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
 </div>
   </div>
 
@@ -460,87 +453,16 @@ body.dark .icon {
   </div>
 </div>
 
-  <!-- DSAR Card -->
-  <div class="iphone-frame">
-    <h1>Join Waitlist</h1>
-    <h2>Discover DSAR</h2>
-    <p class="subtitle">with Vishal Merani </p>
-    <h3>Stress, Sleep, Anxiety</h3>
-    <p class="subtitle">Stop struggling! Decode and conquer</p>
-
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
 
 
-    <h4 class="queries-text">Queries & help @ 9818503888</h4>
+  
 
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief  | Help: 9818503888" id="copyText1" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText1', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
-    </div>
-
-    <div class="footer">💤 22–24 Jul 2025 | Evening ♡ Online Sessions <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
-
-
-  <!-- Happiness Program in Ashram Card -->
-  <div class="iphone-frame">
-    <h1>Join Waitlist</h1>
-    <h2>Happiness Program</h2>
-    <p class="subtitle">Chartered Accountants Special</p>
-    <h3>Hyper Detox with Sudarshan Kriya</h3>
-    <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
-
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="timeline">
-      <li>Join waitlist for next season</li>
-    </ul>
-
-    <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
-
-   <h4 class="queries-text">Queries & help @ 9818503888</h4>
+  
 
 
 
-    <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
-
-<!-- Happiness Program in City Card -->
-  <div class="iphone-frame">
-    <h1>Join Waitlist </h1>
-    <h2>Happiness Program</h2>
-    <p class="subtitle">with Vishal Merani  </p>
-    <h3>Hyper Detox with Sudarshan Kriya</h3>
-    <p class="subtitle">In person | English, Hindi</p>
-
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="timeline">
-      <li><strong> DM to join Join waitlist </strong> </li>
-    </ul>
-
-    <div class="footer">🦦🤌🏻 Starts soon| Bangalore ♡ JP Nagar <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
 
 
- <!-- Oneline Meditation & Breath Card -->
-  <div class="iphone-frame">
-    <h1> Join waitlist for </h1>
-    <h2> Meditation and Breath </h2></h2>
-    <p class="subtitle">workshop with Vishal Merani</p>
-
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-
-    <h4>For Bookings, reach out via team +91 9818503888 </h4>
-    <div class="footer"> 🫁💨🖥️🧘‍♂️ ♡  Online Sessions Only <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
 
 
 <!-- VM themed Image Card -->
