--- a/index.html
+++ b/index.html
@@ -419,11 +419,12 @@ body.dark .icon {
  <!-- Sahaj Meditation Card -->
   <div class="iphone-frame">
     <h1>Join Waitlist,</h1>
-    <h2>for next Sahaj Mediation Batch</h2>
-    <h2>for Deep Sleep & Anxiety Relief sessions</h2>
-    <h2>for offline Ashram Happiness Course</h2>
-    <h2>for offline Happiness Course in City</h2>
-    <h2>for Online Breath and Meditation Workshops</h2>
+    <h2>for </h2>
+      <h3>next Sahaj Mediation Batch</h3>
+    <h3>Deep Sleep & Anxiety Relief sessions</h3>
+    <h3>for offline Ashram Happiness Course</h3>
+    <h3>for offline Happiness Course in City</h3>
+    <h3>for Online Breath and Meditation Workshops</h3>
     <p class="subtitle">with Vishal Merani</p>
     </div>
     <div class="footer"> Queries & help @ 9818503888 | ♡ Online & Offline Sessions <br>
