--- a/index.html
+++ b/index.html
@@ -416,24 +416,24 @@ body.dark .icon {
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
 </div>
   
- <!-- Sahaj Meditation Card -->
+ <!-- Waitlist Card -->
   <div class="iphone-frame">
     <h1>Join Waitlist,</h1>
     <h2>for </h2>
-      <h3>next Sahaj Mediation Batch</h3>
-    <h3>Deep Sleep & Anxiety Relief sessions</h3>
-    <h3>for offline Ashram Happiness Course</h3>
-    <h3>for offline Happiness Course in City</h3>
-    <h3>for Online Breath and Meditation Workshops</h3>
-    <p class="subtitle">with Vishal Merani</p>
+      <p class="subtitle">below sessions with Vishal Merani</p>
+    <h4>Sahaj Mediation Meditation Batches</h4>
+    <h4>Deep Sleep & Anxiety Relief sessions</h4>
+    <h3>offline Ashram Happiness Courses</h3>
+    <h4> offline Happiness Courses in City</h4>
+    <h4>Online Breath and Meditation Workshops</h4>
     </div>
     <div class="footer"> Queries & help @ 9818503888 | ♡ Online & Offline Sessions <br>
 ॐ  Jai Guru Dev ॐ
-</div>
     <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
 </div>
   </div>
 
+  
 <!-- Seva Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
   <img src="vmvol.png" alt="Volunteer" style="width: 100%; border-radius: 20px;" />
