--- a/index.html
+++ b/index.html
@@ -420,13 +420,12 @@ body.dark .icon {
   <div class="iphone-frame">
     <h1>Join Waitlist,</h1>
     <h2>for </h2>
-      <p class="subtitle">below sessions with Vishal Merani</p>
+      <p class="subtitle">sessions with Vishal Merani</p>
     <h4>Sahaj Mediation Meditation Batches</h4>
     <h4>Deep Sleep & Anxiety Relief sessions</h4>
-    <h3>offline Ashram Happiness Courses</h3>
+    <h4>offline Ashram Happiness Courses</h4>
     <h4> offline Happiness Courses in City</h4>
     <h4>Online Breath and Meditation Workshops</h4>
-    </div>
     <div class="footer"> Queries & help @ 9818503888 | ♡ Online & Offline Sessions <br>
 ॐ  Jai Guru Dev ॐ
     <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
