--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ body.dark .icon {
 
 <!-- Secrets of the Subtle Card -->
  <div class="iphone-frame">
-  <h1>Next upcoming -> MEDITATIONS </h1>
+  <h3>Next upcoming -> MEDITATIONS </h3>
   <h2>Join next airings,</h2>
   <h3>we recently aired </h3> 
   <h4>Secrets of the Subtle</h4>
@@ -430,7 +430,8 @@ body.dark .icon {
 ॐ  Jai Guru Dev ॐ
     <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
   </div>
-
+    </div>
+  </div>
   
 <!-- Seva Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
