--- a/index.html
+++ b/index.html
@@ -331,15 +331,16 @@ body.dark .icon {
 
  <!-- Waitlist Card -->
   <div class="iphone-frame">
-    <h1>Join Waitlist,</h1>
-    <h2>for </h2>
-      <p class="subtitle">sessions with Vishal Merani</p>
-    <h4>Sahaj Mediation Meditation Batches</h4>
+    <h1>Join the waitlist,</h1>
+      <p class="subtitle">for upcoming sessions with Vishal Merani</p>
+    <h4>Sahaj Meditation Batches</h4>
     <h4>Deep Sleep & Anxiety Relief sessions</h4>
     <h4>offline Ashram Happiness Courses</h4>
     <h4> offline Happiness Courses in City</h4>
     <h4>Online Breath and Meditation Workshops</h4>
-    <div class="footer"> Queries & help @ 9818503888 | ♡ Online & Offline Sessions <br>
+          <p class="subtitle"> Queries & help @ 9818503888 | ♡ Online & Offline Sessions</p>
+
+    <div class="footer">
 ॐ  Jai Guru Dev ॐ
     <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
   </div>
