--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@ body.dark .icon {
     <h4>offline Ashram Happiness Courses</h4>
     <h4> offline Happiness Courses in City</h4>
     <h4>Online Breath and Meditation Workshops</h4>
-          <p class="subtitle"> Queries & help @ 9818503888 | ♡ Online & Offline Sessions</p>
+    <br>
+   <p class="subtitle"> Queries & help @ 9818503888 </p>
 
     <div class="footer">
 ॐ  Jai Guru Dev ॐ
