--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@ body.dark .icon {
   <h1>Join next airings,</h1>
   <h2>we recently aired </h2> 
   <h4>Secrets of the Subtle</h4>
-  <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
-  <h3>Next upcoming -> MEDITATIONS </h3>
+  <h3>Next we resume with -> MEDITATIONS </h3>
+    <p class = "subtitle">at Kashyapa hall for Ashramites</p>
 </div>
   
 <!-- Seva Image Only -->
