--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ body.dark .icon {
 
 <!-- Secrets of the Subtle Card -->
  <div class="iphone-frame">
-  <h1>Join next airings,</h1>
+  <h1>Join us,</h1>
   <h2>we recently aired </h2> 
   <h4>Secrets of the Subtle</h4>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
