--- a/index.html
+++ b/index.html
@@ -333,6 +333,8 @@ body.dark .icon {
   <div class="iphone-frame">
     <h1>Join the waitlist,</h1>
       <p class="subtitle">for upcoming sessions with Vishal Merani</p>
+  <a href="https://waitlist.vishalmerani.com//" class="button" target="_blank"> Waitlist Entry</a>
+
     <h4>Sahaj Meditation Batches</h4>
     <h4>Deep Sleep & Anxiety Relief sessions</h4>
     <h4>offline Ashram Happiness Courses</h4>
