--- a/index.html
+++ b/index.html
@@ -367,16 +367,16 @@ gtag('config', 'G-QL72FZ9YZ2');
 <p class="subtitle">with Vishal Merani</p>
 <h3> learn well-being online </h3>
 <p class="subtitle">Just you, your breath, and a better you.</p>
-<h4> Pick your preference, Oct 13-16 </h4>
+<h4> Pick your preference,<h4> <h2> Oct 13-16 </h2>
 <ul class="timeline">
 <li>7 AM to 9 AM </li> </ul>
-<a href="https://aolt.in/895332" class="button" target="_blank">Book here ♡, Oct 13-16 </a>
+<a href="https://aolt.in/895332" class="button" target="_blank">Book here ♡</a>
  <ul class="timeline">
 <li>11 AM to 1 PM </li> </ul>
-<a href="https://aolt.in/872073" class="button" target="_blank">Book here ♡, Oct 13-16 </a>
+<a href="https://aolt.in/872073" class="button" target="_blank">Book here ♡ </a>
  <ul class="timeline">
 <li>7 PM to 9 PM </li> </ul>
-<a href="https://aolt.in/905293" class="button" target="_blank">Book here ♡, Oct 13-16 </a>
+<a href="https://aolt.in/905293" class="button" target="_blank">Book here ♡ </a>
  
 <ul class="timeline">
 <li>See you soon </li>
