--- a/index.html
+++ b/index.html
@@ -340,11 +340,10 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Customized</li>
 <li>⤷ Yours</li> </ul>
 <ul class="features">
-<li> 19 – 21 Aug </li>
-<a href="aolt.in/900785" class="button" target="_blank"> 7 AM – 8:30 AM</a>  </ul>
+<li> Pick your preference  </li>
+<a href="aolt.in/900785" class="button" target="_blank"> 7 AM – 8:30 AM, 19 – 21 Aug </a>  </ul>
 <ul class="features">
-<li> 26 – 28 Aug </li> 
-<a href="https://www.artofliving.org/in-en/program/902149" class="button" target="_blank"> 7 AM – 8:30 AM</a> </ul>
+<a href="https://www.artofliving.org/in-en/program/902149" class="button" target="_blank"> 7 AM – 8:30 AM,  26 – 28 Aug</a> </ul>
 <ul class="timeline">
 <li>Happening monthly-ish, tops</li>
 <li>We'll touch base regularly, join whatsapp 💬 </li> 
