--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Personal</li>
 <li>⤷ Customized</li>
 <li>⤷ Yours</li> </ul>
+<h4>Pick your preference  </h4>
 <ul class="features">
- <li>Pick your preference  </li>
 <li> 19 – 21 Aug  </li>
 <a href="aolt.in/900785" class="button" target="_blank"> 7 AM – 8:30 AM </a>  </ul>
 <ul class="features">
@@ -352,13 +352,10 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 </ul>
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
-
 <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
-
-
 
 
 <!-- Oneline Meditation & Breath Card -->
@@ -391,28 +388,6 @@ gtag('config', 'G-QL72FZ9YZ2');
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
- 
- <!-- Waitlist Card -->
-  <div class="iphone-frame">
-    <h1>Join waitlist</h1>
-      <p class="subtitle">for upcoming sessions</p>
-  <a href="https://waitlist.vishalmerani.com//" class="button" target="_blank"> Waitlist Entry</a>
-
-    <h4>Sahaj Meditation Batches</h4>
-    <h4>Deep Sleep & Anxiety Relief sessions</h4>
-    <h4>offline Ashram Happiness Courses</h4>
-    <h4> offline Happiness Courses in City</h4>
-    <h4>Online Breath and Meditation Workshops</h4>
-    <br>
-   <p class="subtitle"> Queries & help @ 9818503888 </p>
-
-    <div class="footer">
-ॐ  Jai Guru Dev ॐ
-    <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
-  </div>
-    </div>
-  </div>
-
 
 <!-- Scanning Card  -->
 <div class="iphone-frame">
@@ -489,6 +464,26 @@ gtag('config', 'G-QL72FZ9YZ2');
     <p class = "subtitle">at Kashyapa hall for Ashramites</p>
 </div>
 
+  <!-- Waitlist Card -->
+  <div class="iphone-frame">
+    <h1>Join waitlist</h1>
+      <p class="subtitle">for upcoming sessions</p>
+  <a href="https://waitlist.vishalmerani.com//" class="button" target="_blank"> Waitlist Entry</a>
+
+    <h4>Sahaj Meditation Batches</h4>
+    <h4>Deep Sleep & Anxiety Relief sessions</h4>
+    <h4>offline Ashram Happiness Courses</h4>
+    <h4> offline Happiness Courses in City</h4>
+    <h4>Online Breath and Meditation Workshops</h4>
+    <br>
+   <p class="subtitle"> Queries & help @ 9818503888 </p>
+
+    <div class="footer">
+ॐ  Jai Guru Dev ॐ
+    <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
+  </div>
+    </div>
+  </div>
 
 <!-- DSAR Card -->
 <div class="iphone-frame">
