--- a/index.html
+++ b/index.html
@@ -346,6 +346,9 @@ gtag('config', 'G-QL72FZ9YZ2');
 <ul class="features">
  <li> 26 – 28 Aug </li>
 <a href="https://www.artofliving.org/in-en/program/902149" class="button" target="_blank"> 7 AM – 8:30 AM</a> </ul>
+ <ul class="features">
+<li> 12 – 14 Sept  </li>
+<a href="https://www.artofliving.online/registration.php?event_id=906392" class="button" target="_blank"> 7 AM – 9 AM </a>  </ul>
 <ul class="timeline">
 <li>Happening monthly-ish, tops</li>
 <li>We'll touch base regularly, join whatsapp 💬 </li> 
