--- a/index.html
+++ b/index.html
@@ -490,13 +490,13 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <!-- DSAR Card -->
 <div class="iphone-frame">
-<h1>Join Waitlist</h1>
+<h1>This Sept</h1>
 <h2>Discover DSAR</h2>
-<p class="subtitle">with Vishal Merani & Shweta Vyas</p>
+<p class="subtitle">with Vishal Merani</p>
 <h3>Stress, Sleep, Anxiety</h3>
 <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-<a  class="button" target="_blank">Booked for this season, see you in next</a> 
+<a href="https://www.artofliving.online/registration.php?event_id=906390" class="button" target="_blank"> 7:30 PM to 10 PM </a> 
 <ul class="features">
 <li>To calm anxiety</li>
 <li>For better sleep</li>
@@ -511,13 +511,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
-<div class="copy-box">
-<input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief  | Help: 9818503888" id="copyText1" readonly>
-<button class="copy-btn" onclick="copyToClipboard('copyText1', this)">Copy</button>
-<a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
-</div>
-
-<div class="footer">💤 22–24 Jul 2025 | Evening ♡ Online Sessions <br>
+<div class="footer">💤 9–11 Sept 2025 | Evening ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
