--- a/index.html
+++ b/index.html
@@ -360,6 +360,34 @@ gtag('config', 'G-QL72FZ9YZ2');
 </div>
 </div>
 
+ 
+<!-- DSAR Card -->
+<div class="iphone-frame">
+<h1>This Sept</h1>
+<h2>Discover DSAR</h2>
+<p class="subtitle">with Vishal Merani</p>
+<h3>Stress, Sleep, Anxiety</h3>
+<p class="subtitle">Stop struggling! Decode and conquer</p>
+
+<a href="https://www.artofliving.online/registration.php?event_id=906390" class="button" target="_blank"> Enroll <> 7:30 PM to 10 PM </a> 
+<ul class="features">
+<li>To calm anxiety</li>
+<li>For better sleep</li>
+<li>Activate relaxation</li>
+</ul>
+
+<ul class="timeline">
+<li>DM to join in next season</li>
+<li class="location-text"><strong>📍 Zoom | Online</strong></li>
+
+</ul>
+
+<h4 class="queries-text">Queries & help @ 9818503888</h4>
+
+<div class="footer">💤 9–11 Sept 2025 | Evening ♡ Online Sessions <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+</div>
 
 <!-- Oneline Meditation & Breath Card -->
 <div class="iphone-frame">
@@ -488,33 +516,6 @@ gtag('config', 'G-QL72FZ9YZ2');
     </div>
   </div>
 
-<!-- DSAR Card -->
-<div class="iphone-frame">
-<h1>This Sept</h1>
-<h2>Discover DSAR</h2>
-<p class="subtitle">with Vishal Merani</p>
-<h3>Stress, Sleep, Anxiety</h3>
-<p class="subtitle">Stop struggling! Decode and conquer</p>
-
-<a href="https://www.artofliving.online/registration.php?event_id=906390" class="button" target="_blank"> 7:30 PM to 10 PM </a> 
-<ul class="features">
-<li>To calm anxiety</li>
-<li>For better sleep</li>
-<li>Activate relaxation</li>
-</ul>
-
-<ul class="timeline">
-<li>DM to join in next season</li>
-<li class="location-text"><strong>📍 Zoom | Online</strong></li>
-
-</ul>
-
-<h4 class="queries-text">Queries & help @ 9818503888</h4>
-
-<div class="footer">💤 9–11 Sept 2025 | Evening ♡ Online Sessions <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-</div>
 
 
 <!-- Happiness Program in Ashram Card -->
