--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ gtag('config', 'G-QL72FZ9YZ2');
  
 <!-- DSAR Card -->
 <div class="iphone-frame">
-<h1>This Sept</h1>
+<h1>This Sept 9</h1>
 <h2>Discover DSAR</h2>
 <p class="subtitle">with Vishal Merani</p>
 <h3>Stress, Sleep, Anxiety</h3>
@@ -374,7 +374,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 </ul>
 
 <ul class="timeline">
-<li>DM to join in next season</li>
+<li>Sept 9 - Sept 11</li>
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 
 </ul>
