--- a/index.html
+++ b/index.html
@@ -517,15 +517,15 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <!-- Happiness Program in Ashram Card -->
 <div class="iphone-frame">
-<h1>Join Waitlist</h1>
-<h2>Happiness Program</h2>
-<p class="subtitle">Chartered Accountants Special</p>
+<h1>YES+</h1>
+<h2>at Ashram</h2>
+<p class="subtitle">Youth Special</p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
 
-<a  class="button" target="_blank">Booked for this season, see you in next</a> 
+<a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Oct 10 - Oct 12</a> 
 <ul class="timeline">
-<li>Join waitlist for next season</li>
+<li>Check in by Oct 9, 2pm </li>
 </ul>
 
 <h5>Complimentary at Ashram</h5>
@@ -544,13 +544,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
-<div class="copy-box">
-<input class="copy-input" type="text" value="Happiness Program  | Help: 9818503888" id="copyText2" readonly>
-<button class="copy-btn" onclick="copyToClipboard('copyText2', this)">Copy</button>
-<a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
-</div>
-
-<div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
+<div class="footer">🦦🤌🏻 Starts Oct 10| Bangalore ♡ Ashram <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
