--- a/index.html
+++ b/index.html
@@ -357,6 +357,39 @@ gtag('config', 'G-QL72FZ9YZ2');
 </div>
 </div>
 
+ <!-- Yes+ Program in Ashram Card -->
+<div class="iphone-frame">
+<h1>YES+</h1>
+<h2>at Ashram</h2>
+<p class="subtitle">Youth Special</p>
+<h3>Hyper Detox with Sudarshan Kriya</h3>
+<p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
+
+<a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Book now, Oct 10 - Oct 12</a> 
+<ul class="timeline">
+<li>Check in by Oct 9, 2pm </li>
+</ul>
+
+<h5>Complimentary at Ashram</h5>
+<ul class="features">
+<li>Rudra pooja meditation on Mondays</li>
+<li>Regular follow-ups</li>
+<li>Sattvic food</li>
+<li>Free repeats outside ashram</li>
+</ul>
+
+<ul class="timeline">
+<li><strong>📍 Art of Living International Center</strong><br>Bengaluru, Karnataka</li>
+</ul>
+
+<a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
+
+<h4 class="queries-text">Queries & help @ 9818503888</h4>
+
+<div class="footer">🦦🤌🏻 Starts Oct 10| Bangalore ♡ Ashram <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+</div>
  
 <!-- DSAR Card -->
 <div class="iphone-frame">
@@ -376,7 +409,6 @@ gtag('config', 'G-QL72FZ9YZ2');
 <ul class="timeline">
 <li>Sept 9 - Sept 11</li>
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
-
 </ul>
 
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
@@ -410,12 +442,13 @@ gtag('config', 'G-QL72FZ9YZ2');
 </ul>
 
 <h4>For Bookings, reach out via team +91 9818503888 </h4>
-
-
 <div class="footer"> 🫁💨🖥️🧘‍♂️ ♡  Online Sessions Only <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
+
+
+
 
 <!-- Scanning Card  -->
 <div class="iphone-frame">
@@ -515,7 +548,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 
 
-<!-- Happiness Program in Ashram Card -->
+<!-- Yes+ Program in Ashram Card -->
 <div class="iphone-frame">
 <h1>YES+</h1>
 <h2>at Ashram</h2>
@@ -523,7 +556,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
 
-<a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Oct 10 - Oct 12</a> 
+<a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Book now, Oct 10 - Oct 12</a> 
 <ul class="timeline">
 <li>Check in by Oct 9, 2pm </li>
 </ul>
@@ -552,7 +585,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <!-- Happiness Program in City Card -->
 <div class="iphone-frame">
 <h1>Join Waitlist </h1>
-<h2>Happiness Program</h2>
+<h2>Happiness Program in City</h2>
 <p class="subtitle">with Vishal Merani  </p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle">In person | English, Hindi</p>
