--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <!-- Oneline Meditation & Breath Card -->
 <div class="iphone-frame">
-<h1> Workshop,</h1>
-<h2> Meditation and Breath </h2></h2>
+<h1> Cabin Crew Special,</h1>
+<h2> Meditation and Breath Workshop </h2>
 <p class="subtitle">with Vishal Merani</p>
 <h3> learn well-being online </h3>
 <p class="subtitle">Just you, your breath, and a better you.</p>
