--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <!-- Sahaj Meditation Card -->
 <div class="iphone-frame">
 <h1>Sahaj Meditation,</h1>
-<p class="subtitle">with Vishal Merani</p>
+<p class="subtitle">with Vishal Merani/ Team</p>
 <h3>Lapse into meditation in minutes</h3>
 <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
 <ul class="features">
@@ -341,11 +341,14 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Yours</li> </ul>
 <h4>Pick your preference  </h4>
 <ul class="features">
- <li> 26 – 28 Aug </li>
-<a href="https://www.artofliving.org/in-en/program/902149" class="button" target="_blank"> 7 AM – 8:30 AM</a> </ul>
+ <li> 10 – 12 Oct </li>
+<a href="https://www.artofliving.org/in-en/program/913403" class="button" target="_blank"> 7 AM – 9 AM </a> </ul>
  <ul class="features">
-<li> 12 – 14 Sept  </li>
-<a href="https://www.artofliving.online/registration.php?event_id=906392" class="button" target="_blank"> 7 AM – 9 AM </a>  </ul>
+<li> 10 – 12 Oct  </li>
+<a href="https://www.artofliving.org/in-en/program/909425" class="button" target="_blank"> 7 AM – 8:45 AM </a>  </ul>
+  <ul class="features">
+<li> 10 – 12 Oct  </li>
+<a href="https://www.artofliving.org/in-en/program/917289" class="button" target="_blank"> 7 AM – 9 AM </a>  </ul>
 <ul class="timeline">
 <li>Happening monthly-ish, tops</li>
 <li>We'll touch base regularly, join whatsapp 💬 </li> 
