--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <!-- Oneline Meditation & Breath Card -->
 <div class="iphone-frame">
-<h1> Cabin Crew Special,</h1>
+<h1> October Special,</h1>
 <h2> Meditation and Breath Workshop </h2>
 <p class="subtitle">with Vishal Merani</p>
 <h3> learn well-being online </h3>
