--- a/index.html
+++ b/index.html
@@ -341,14 +341,9 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Yours</li> </ul>
 <h4>Pick your preference  </h4>
 <ul class="features">
- <li> 10 – 12 Oct </li>
+ <li> Join waitlist for Nov </li>
 <a href="https://www.artofliving.org/in-en/program/913403" class="button" target="_blank"> 7 AM – 9 AM </a> </ul>
  <ul class="features">
-<li> 10 – 12 Oct  </li>
-<a href="https://www.artofliving.org/in-en/program/909425" class="button" target="_blank"> 7 AM – 8:45 AM </a>  </ul>
-  <ul class="features">
-<li> 10 – 12 Oct  </li>
-<a href="https://www.artofliving.org/in-en/program/917289" class="button" target="_blank"> 7 AM – 9 AM </a>  </ul>
 <ul class="timeline">
 <li>Happening monthly-ish, tops</li>
 <li>We'll touch base regularly, join whatsapp 💬 </li> 
@@ -368,9 +363,9 @@ gtag('config', 'G-QL72FZ9YZ2');
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
 
-<a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Book now, Oct 10 - Oct 12</a> 
+<a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Booked for this season</a> 
 <ul class="timeline">
-<li>Check in by Oct 9, 2pm </li>
+<li>Join waitlist </li>
 </ul>
 
 <h5>Complimentary at Ashram</h5>
@@ -389,7 +384,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
-<div class="footer">🦦🤌🏻 Starts Oct 10| Bangalore ♡ Ashram <br>
+<div class="footer">🦦🤌🏻 Starts Nov again| Bangalore ♡ Ashram <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
@@ -397,12 +392,12 @@ gtag('config', 'G-QL72FZ9YZ2');
 <!-- DSAR Card -->
 <div class="iphone-frame">
 <h1>Discover DSAR</h1>
-<h2>This Oct 7</h2>
+<h2>This Oct 27</h2>
 <p class="subtitle">with Vishal Merani</p>
 <h3>Stress, Sleep, Anxiety</h3>
 <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-<a href="https://www.artofliving.online/registration.php?event_id=911622" class="button" target="_blank"> Enroll <> 8:00 PM to 10:30 PM </a> 
+<a href="https://www.artofliving.online/registration.php?event_id=918142" class="button" target="_blank"> Enroll <> 8:00 PM to 10:30 PM </a> 
 <ul class="features">
 <li>To calm anxiety</li>
 <li>For better sleep</li>
@@ -410,13 +405,13 @@ gtag('config', 'G-QL72FZ9YZ2');
 </ul>
 
 <ul class="timeline">
-<li>Oct 7 - Oct 9</li>
+<li>Oct 27 - Oct 29</li>
 <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 </ul>
 
 <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
-<div class="footer">💤 7–9 Oct 2025 | Late Evening ♡ Online Friendly Sessions <br>
+<div class="footer">💤 27–29 Oct 2025 | Late Evening ♡ Online Friendly Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
@@ -428,17 +423,10 @@ gtag('config', 'G-QL72FZ9YZ2');
 <p class="subtitle">with Vishal Merani</p>
 <h3> learn well-being online </h3>
 <p class="subtitle">Just you, your breath, and a better you.</p>
-<h4>Pick your preference</h4><h2> Oct 13-16 </h2>
+<h4>Booked for this season </h4><h2> Join in Nov :) </h2>
 <ul class="timeline">
 <li>7 AM to 9 AM</li> </ul>
-<a href="https://aolt.in/895332" class="button" target="_blank">Book here ♡ </a>
-<ul class="timeline">
-<li>11 AM to 1 PM</li> </ul>
-<a href="https://aolt.in/872073" class="button" target="_blank">Book here ♡ </a>
-<ul class="timeline">
-<li>7 PM to 9 PM</li> </ul>
-<a href="https://aolt.in/905293" class="button" target="_blank">Book here ♡ </a>
- 
+<a href="https://aolt.in/895332" class="button" target="_blank">Book here ♡ </a> 
 <ul class="timeline">
 <li>See you soon </li>
 <li><strong>📍 Online, Zoom </strong></li>
@@ -449,9 +437,6 @@ gtag('config', 'G-QL72FZ9YZ2');
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
-
-
-
 
 <!-- Scanning Card  -->
 <div class="iphone-frame">
@@ -511,7 +496,6 @@ gtag('config', 'G-QL72FZ9YZ2');
 </div>
 </div>
 
-
 <!-- Serets of the Subtle Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
 <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
@@ -551,27 +535,27 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <!-- Happiness Program in City Card -->
 <div class="iphone-frame">
-<h1>Join Waitlist </h1>
+<h1>Join us in Lucknow </h1>
 <h2>Happiness Program in City</h2>
-<p class="subtitle">with Vishal Merani  </p>
+<p class="subtitle">with Vishal Merani </p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle">In person | English, Hindi</p>
 
-<a  class="button" target="_blank">Booked for this season, see you in next</a> 
+<a href="https://www.artofliving.org/in-en/program/916567"  class="button" target="_blank">24 Oct - 26 Oct</a> 
 <ul class="timeline">
-<li><strong> Join waitlist </strong> </li>
+<li><strong> Weekday: 6:00 PM - 9:00 PM <br>
+Weekend: 9:00 AM - 12:00 AM </strong> </li>
 </ul>
-
+<li><strong> Queries - Akshay Vohra, 7275889831 </strong></li>
 <ul class="features">
 <li>Regular follow-ups</li>
 <li>Free repeats outside ashram</li>
 </ul>
 
 <ul class="timeline">
-<li><strong>📍See you soon</strong><br>Bengaluru, Karnataka</li>
+<li><strong>📍
+Rajaji Puram, Rajajipuram </strong><br> Lucknow, India, 226017</li>
 </ul>
-
-<a href="https://maps.app.goo.gl/Z1NnMr2MvozvDgBm7" class="button" target="_blank">On Maps</a>
 
 <h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
 
