--- a/index.html
+++ b/index.html
@@ -543,10 +543,10 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <a href="https://www.artofliving.org/in-en/program/916567"  class="button" target="_blank">24 Oct - 26 Oct</a> 
 <ul class="timeline">
-<li><strong> Weekday: 6:00 PM - 9:00 PM <br>
-Weekend: 9:00 AM - 12:00 AM </strong> </li>
+<li> Weekday: 6:00 PM - 9:00 PM <br>
+Weekend: 9:00 AM - 12:00 AM </li>
 </ul>
-<li><strong> Queries - Akshay Vohra, 7275889831 </strong></li>
+<li> Queries - Akshay, 7275889831 </li>
 <ul class="features">
 <li>Regular follow-ups</li>
 <li>Free repeats outside ashram</li>
