--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li> Weekday: 6:00 PM - 9:00 PM <br>
 Weekend: 9:00 AM - 12:00 AM </li>
 </ul>
-<li> Queries - Akshay, 7275889831 </li>
+<ul class="features"> <li> Queries - Akshay, 7275889831 </li> </ul>
 <ul class="features">
 <li>Regular follow-ups</li>
 <li>Free repeats outside ashram</li>
