--- a/index.html
+++ b/index.html
@@ -543,18 +543,17 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <a href="https://www.artofliving.org/in-en/program/916567"  class="button" target="_blank">24 Oct - 26 Oct</a> 
 <ul class="timeline">
-<li> Weekday: 6:00 PM - 9:00 PM <br>
-Weekend: 9:00 AM - 12:00 AM </li>
+<li> Weekday: 6-9p <br>
+Weekend: 9-12a </li>
 </ul>
-<ul class="features"> <li> Queries - Akshay, 7275889831 </li> </ul>
+<ul class="features"> <li> Queries - 7275889831 </li> </ul>
 <ul class="features">
 <li>Regular follow-ups</li>
 <li>Free repeats outside ashram</li>
 </ul>
 
 <ul class="timeline">
-<li><strong>📍
-Rajaji Puram, Rajajipuram </strong><br> Lucknow, India, 226017</li>
+<li>📍Rajajipuram <br> Lucknow </li>
 </ul>
 
 <h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
