--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <a href="https://www.artofliving.org/in-en/program/916567"  class="button" target="_blank">24 Oct - 26 Oct</a> 
 <ul class="timeline">
-<li> <br> Timings <br> Weekday: 6-9p <br>
+<li> Timings <br> Weekday: 6-9p <br>
 Weekend: 9-12a </li>
 </ul>
 <ul class="features"> <li> Queries - 7275889831 </li> </ul>
