--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ Weekend: 9-12a </li>
 <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
 </div>
 
-<div class="footer">🦦🤌🏻 Starts soon| Bangalore ♡ JP Nagar <br>
+<div class="footer">🦦🤌🏻 Starts soon| Bangalore ♡ Lucknow <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
