--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <!-- Happiness Program in City Card -->
 <div class="iphone-frame">
-<h1>Join us in Lucknow </h1>
+<h1>Lucknow </h1>
 <h2>Happiness Program in City</h2>
 <p class="subtitle">with Vishal Merani </p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
