--- a/index.html
+++ b/index.html
@@ -569,11 +569,13 @@ Weekend: 9-12a </li>
 </div>
 </div>
 
-
+https://vol.vishalmerani.com/
  <!-- Seva Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
   <img src="vmvol.png" alt="Volunteer" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text"> 𓆩Join in𓆪 </div>
+<a href="https://vol.vishalmerani.com/" class="overlay-text" style="text-decoration: none; color: inherit;" target="_blank" rel="noopener noreferrer">
+  𓆩Join in𓆪
+</a> 
 </div>
 
   <!-- Seva Card -->
