--- a/index.html
+++ b/index.html
@@ -329,6 +329,37 @@ gtag('config', 'G-QL72FZ9YZ2');
 </svg>
 </div>
 
+
+<!-- Online Advanced Meditation Retreat -->
+<div class="iphone-frame">
+<h1> Diwali ✨Online Silence Retreat </h1>
+<p class="subtitle"> Guided by Darshak Bhaiya & Neha Didi</p>
+<h3>With the blessings of Gurudev</h3>
+<p class="subtitle"> 3 days of inner fireworks </p>
+
+<ul class="features">
+<li>⤷ Silence</li>
+<li>⤷ Mudras</li>
+<li>⤷ Meditations</li> </ul>
+<h4>Pick your preference  </h4>
+<ul class="features">
+ <li> Watch Invite </li>
+<a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> 
+<a href=“https://www.artofliving.online/registration.php?event_id=919547” class=“button” target=“_blank”> Peep the invite</a></ul>
+ <ul class="features">
+<ul class="timeline"> 
+<li> 100% – cozy & online</li>
+<li> For Happiness Program, YES!+, YLTP & OMBW grads </li>
+<li>6:30 AM – 8 PM (with rejuvenating breaks) </li> 
+<li class="location-text">📍 Zoom | Online - your space, your energy</li>
+</ul>
+<h4 class="queries-text"> Call/WhatsApp: 9818503888 </h4>
+<div class="footer"> 😌 3 days ♡ Online Sessions <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+</div>
+
+ 
 <!-- Sahaj Meditation Card -->
 <div class="iphone-frame">
 <h1>Sahaj Meditation,</h1>
