--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <ul class="features">
  <li> Watch Invite </li>
 <a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> 
-<a href=“https://www.artofliving.online/registration.php?event_id=919547” class=“button” target=“_blank”> Peep the invite</a></ul>
+<a href=“https://aolt.in/919547” class=“button” target=“_blank”> Peep the invite</a></ul>
  <ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
