--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 
 <!-- Online Advanced Meditation Retreat -->
 <div class="iphone-frame">
-<h1> Diwali ✨Online Silence Retreat </h1>
+<h1> Silence Retreat </h1>
 <p class="subtitle"> Guided by Darshak Bhaiya & Neha Didi</p>
 <h3>With the blessings of Gurudev</h3>
 <p class="subtitle"> 3 days of inner fireworks </p>
@@ -343,9 +343,8 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Meditations</li> </ul>
 <h4>Pick your preference  </h4>
 <ul class="features">
- <li> Watch Invite </li>
-<a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> 
-<a href=“https://aolt.in/919547” class=“button” target=“_blank”> Peep the invite</a></ul>
+<a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> </ul>
+<ul class="features"><a href=“https://aolt.in/919547” class=“button” target=“_blank”> Peep the invite</a></ul>
  <ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
