--- a/index.html
+++ b/index.html
@@ -341,15 +341,15 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Silence</li>
 <li>⤷ Mudras</li>
 <li>⤷ Meditations</li> </ul>
-<h4>Pick your preference  </h4>
+<h4> Pick your preference  </h4>
 <ul class="features">
-<a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> </ul>
+<a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> </ul> <br>
 <ul class="features"><a href=“https://aolt.in/919547” class=“button” target=“_blank”> Peep the invite</a></ul>
  <ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
 <li> For Happiness Program, YES!+, YLTP & OMBW grads </li>
-<li>6:30 AM – 8 PM (with rejuvenating breaks) </li> 
+<li> 6:30 AM – 8 PM (with rejuvenating breaks) </li> 
 <li class="location-text">📍 Zoom | Online - your space, your energy</li>
 </ul>
 <h4 class="queries-text"> Call/WhatsApp: 9818503888 </h4>
