--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@ gtag('config', 'G-QL72FZ9YZ2');
 <h4> Pick your preference  </h4>
 <ul class="features">
 <a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> </ul> <br>
-<ul class="features"><a href=“https://aolt.in/919547” class=“button” target=“_blank”> Peep the invite</a></ul>
+<ul class="features">
+ <a href=“https://aolt.in/919547” class=“button” target=“_blank”> Peep the invite</a></ul>
  <ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
