--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Meditations</li> </ul>
 <h4> Pick your preference  </h4>
 <ul class="features">
-<a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> </ul> <br>
+<a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> </ul>
 <ul class="features">
- <a href=“https://aolt.in/919547” class=“button” target=“_blank”> Peep the invite</a></ul>
+ <a href="https://aolt.in/919547" class="button" target="_blank"> Peep the invite</a></ul>
  <ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
