--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ gtag('config', 'G-QL72FZ9YZ2');
  <ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
-<li> For Happiness Program, YES!+, YLTP & OMBW grads </li>
+<li> For HP, YES!+, YLTP & OMBW grads </li>
 <li> 6:30 AM – 8 PM (with rejuvenating breaks) </li> 
 <li class="location-text">📍 Zoom | Online - your space, your energy</li>
 </ul>
