--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Mudras</li>
 <li>⤷ Online</li>
 <li>⤷ Meditations</li> </ul>
-<h4> Pick your preference  </h4>
+<h4> Tap in  </h4>
 <ul class="features">
 <a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a>
 <a href="https://aolt.in/919547" class="button" target="_blank"> Peep the invite</a></ul>
