--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@ gtag('config', 'G-QL72FZ9YZ2');
 <!-- Online Advanced Meditation Retreat -->
 <div class="iphone-frame">
 <h1> Silence Retreat </h1>
-<p class="subtitle"> Guided by Darshak Bhaiya & Neha Didi</p>
-<h3>With the blessings of Gurudev</h3>
-<p class="subtitle"> 3 days of inner fireworks </p>
+<p class="subtitle">Guided by Darshak Bhaiya & Neha Didi</p>
+<h3>3 days of inner fireworks</h3>
+<p class="subtitle">With the blessings of Gurudev</p>
 
 <ul class="features">
 <li>⤷ Silence</li>
