--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li> 100% – cozy & online</li>
 <li> For HP, YES!+, YLTP & OMBW grads </li>
 <li> 6:30 AM – 8 PM (with rejuvenating breaks) </li> 
-<li class="location-text">📍- your space, your energy</li>
+<li class="location-text">📍 your space </li>
 </ul>
 <h4 class="queries-text"> Call/WhatsApp: 9818503888 </h4>
 <div class="footer"> 😌 3 days ♡ Online Sessions <br>
