--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li>⤷ Mudras</li>
 <li>⤷ Online</li>
 <li>⤷ Meditations</li> </ul>
-<h4> Tap in  </h4> <ul class="features"> <a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> <a href="https://aolt.in/919547" class="button" target="_blank"> Peep the invite</a></ul>
+<span> <h4>Tap in</h4></span> <ul class="features"> <a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> <a href="https://aolt.in/919547" class="button" target="_blank"> Peep the invite</a></ul>
  <ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
 <li> For HP, YES!+, YLTP & OMBW grads </li>
-<li> 6:30 AM – 8 PM (with rejuvenating breaks) </li> 
+<li> 6:30 AM – 8 PM + breaks </li> 
 <li class="location-text">📍 your space </li>
 </ul>
 <h4 class="queries-text"> Call/WhatsApp: 9818503888 </h4>
