--- a/index.html
+++ b/index.html
@@ -296,6 +296,20 @@ transition: opacity 0.4s ease;
 .subtle-card-with-text:hover .overlay-text {
 opacity: 1;
 }
+.tap-in-row {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap; /* Optional: allow wrapping on small screens */
+  margin-top: 0.6rem;
+  margin-bottom: 0.6rem;
+}
+
+.tap-in-row h4 {
+  margin: 0;
+  font-size: 0.65rem;
+  font-weight: 380;
+}
 
 
 </style>
@@ -329,21 +343,23 @@ gtag('config', 'G-QL72FZ9YZ2');
 </svg>
 </div>
 
-
 <!-- Online Advanced Meditation Retreat -->
 <div class="iphone-frame">
 <h1> Silence Retreat </h1>
 <p class="subtitle">Guided by Darshak Bhaiya & Neha Didi</p>
 <h3>3 days of inner fireworks</h3>
 <p class="subtitle">With the blessings of Gurudev</p>
-
 <ul class="features">
 <li>⤷ Silence</li>
 <li>⤷ Mudras</li>
 <li>⤷ Online</li>
 <li>⤷ Meditations</li> </ul>
-<span> <h4>Tap in</h4></span> <ul class="features"> <a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank"> Watch the Why’s</a> <a href="https://aolt.in/919547" class="button" target="_blank"> Peep the invite</a></ul>
- <ul class="features">
+<div class="tap-in-row">
+  <h4>Tap in</h4>
+  <a href="https://www.youtube.com/watch?v=j2cNxo8VemQ" class="button" target="_blank">Watch the Why’s</a>
+  <a href="https://aolt.in/919547" class="button" target="_blank">Peep the invite</a>
+</div>
+<ul class="features">
 <ul class="timeline"> 
 <li> 100% – cozy & online</li>
 <li> For HP, YES!+, YLTP & OMBW grads </li>
