--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@ gtag('config', 'G-QL72FZ9YZ2');
 <h2>at Ashram</h2>
 <p class="subtitle">Youth Special</p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
-<p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
+<p class="subtitle"> with Vishal Merani</p>
+<p class="subtitle"> In person | English, Hindi</p>
 
 <a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Booked for this season</a> 
 <ul class="timeline">
