--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <p class="subtitle">Youth Special</p>
 <h3>Hyper Detox with Sudarshan Kriya</h3>
 <p class="subtitle"> with Vishal Merani</p>
-<h4><p class="subtitle"> In-person | EN, HI</p></h4>
+<h4> class="subtitle"> In-person | EN, HI</h4>
 
 <a href="https://programs.vvmvp.org/events/783/" class="button" target="_blank">Booked for this season</a> 
 <ul class="timeline">
