--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <li class="location-text">📍 your space </li>
 </ul>
 <h4 class="queries-text"> Call/WhatsApp: 9818503888 </h4>
-<div class="footer"> 😌 3 days ♡ Online Sessions <br>
+<div class="footer"> 🤫⃤ 3 days ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
 </div>
