--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <!-- Online Advanced Meditation Retreat -->
 <div class="iphone-frame">
 <h1> Silence Retreat </h1>
+<h2> 31stOct onwards</h2>
 <p class="subtitle">Guided by Neha, Darshak </p>
 <h3>3 days of inner fireworks</h3>
 <p class="subtitle">With the blessings of Gurudev</p>
