--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ font-weight: 370;
 margin: 1rem 0 0.3rem;
 }
 
+h3 + h3 {
+  margin-top: 0; /* remove top margin of second h3 */
+}
+
 h4 {
 font-size: 0.65rem;
 font-weight: 380;
