--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ gtag('config', 'G-QL72FZ9YZ2');
 <div class="iphone-frame">
 <h1> Silence Retreat </h1>
 <p class="subtitle">Guided by Neha, Darshak </p>
-<h3> 31stOct onwards</h3>
+<h3> 31stOct </h3>
 <h3>3 days of inner fireworks</h3>
 <p class="subtitle">With the blessings of Gurudev</p>
 <ul class="features">
